added auth route

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
-MONGO_URL='mongodb+srv://dzuliashvilinika016:qh8TdlT5IU5evqBc@cluster0.ni5ts.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0',
-SALT=10
-ACCESS_TOKEN_PRIVATEKEY=BCWIHCI3EHCIWNDOCWXPCNIJENCOWXCKENOJCNREOC;
-REFRESH_TOKEN_PRIVATEKEY=LKWMXOKMWEPXMWOEJCOJHBMSLCNOKWCOK49823URC;
+MONGO_URL='mongodb+srv://dzuliashvilinika016:qh8TdlT5IU5evqBc@cluster0.ni5ts.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+ACCESS_TOKEN_PRIVATEKEY=BCWIHCI3EHCIWNDOCWXPCNIJENCOWXCKENOJCNREOC
+REFRESH_TOKEN_PRIVATEKEY=LKWMXOKMWEPXMWOEJCOJHBMSLCNOKWCOK49823URC
+JWT_EXPIRE="5d"
+NODE_ENV=production 
+JWT_REFRESH_EXPIRE ="5d"
